<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <EditText
        android:id="@+id/etEntrada"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="number"
        android:maxLength="20"
        android:textSize="30sp"
        android:hint="@string/strHintEntrada"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="@id/guideline0"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <TextView
        android:id="@+id/strConvertir"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline4"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@id/guideline0"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        android:text="@string/strConvertir"
        android:textSize="30sp"
        android:gravity="center" />
    <TextView
        android:id="@+id/tvSalida"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline0"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        android:hint="@string/strHintSalida"
        android:textSize="30sp"
        android:gravity="fill" />

    <RadioGroup
        android:id="@+id/rbGrupo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@id/guideline0"
        app:layout_constraintEnd_toEndOf="@id/guideline1">
        <RadioButton
            android:id="@+id/rbKg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strKg"/>
        <RadioButton
            android:id="@+id/rbG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strG"/>
        <RadioButton
            android:id="@+id/rbMg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strMg"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rbGrupo2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/guideline6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline0"
        app:layout_constraintEnd_toEndOf="@id/guideline1">


        <RadioButton
            android:id="@+id/rbKg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strKg" />

        <RadioButton
            android:id="@+id/rbG2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strG" />

        <RadioButton
            android:id="@+id/rbMg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strMg" />
    </RadioGroup>





</androidx.constraintlayout.widget.ConstraintLayout>